/////////////////////////////////////////////////////////////
// Generated by the VisualData modelbuilder.  DO NOT EDIT!
/////////////////////////////////////////////////////////////
syntax = "proto3";
package OpenNGS.Core;


//文本
//Data\Entities\OpenNGS\OpenNGS.xlsx
message NGSText{
	string Key = 1;  //Id
}

//属性集
//Data\Entities\OpenNGS\OpenNGS.xlsx
message AttributesInt32{
	map<int64, int32> Values = 1;  //属性集
}

//属性集
//Data\Entities\OpenNGS\OpenNGS.xlsx
message AttributesInt64{
	map<int64, int64> Values = 1;  //属性集
}

//属性集
//Data\Entities\OpenNGS\OpenNGS.xlsx
message AttributesSingle{
	map<int64, float> Values = 1;  //属性集
}

//属性集
//Data\Entities\OpenNGS\OpenNGS.xlsx
message AttributesDouble{
	map<int64, double> Values = 1;  //属性集
}

//属性定义
//Data\Entities\OpenNGS\OpenNGS.xlsx
message Attribute{
	uint32 Id = 1;  //Id
	string Name = 2;  //名称
	OpenNGS.Core.NGSText Title = 3;  //标题
	OpenNGS.Core.NGSText Description = 4;  //Description
}
message AttributeArray{
	repeated Attribute items = 1;
}

//空包
//Data\Entities\OpenNGS\OpenNGS.xlsx
message NGSVoid{
}

//Vector2
//Data\Entities\OpenNGS\OpenNGS.xlsx
message NGSVector2{
	float X = 1;  //X
	float Y = 2;  //Y
}

//Vector3
//Data\Entities\OpenNGS\OpenNGS.xlsx
message NGSVector3{
	float X = 1;  //X
	float Y = 2;  //Y
	float Z = 3;  //Z
}

//Vector4
//Data\Entities\OpenNGS\OpenNGS.xlsx
message NGSVector4{
	float X = 1;  //X
	float Y = 2;  //Y
	float Z = 3;  //Z
	float W = 4;  //W
}

//消息队列的消息定义
//Data\Entities\OpenNGS\OpenNGS.xlsx
message NGSMessage{
	string topic_name = 1;  //主题
	uint64 producer_id = 2;  //生产者标识
	uint64 message_id = 3;  //消息标识
	bytes payload = 4;  //消息内容
}

//通用协议返回
//Data\Entities\OpenNGS\OpenNGS.xlsx
message NGSResult{
	int32 Result = 1;  //返回值
	string Message = 2;  //返回消息
}
